update scripts and readme to change flannel to weavenet, also a version with swap

--- a/implementation/example/redis.yaml
+++ b/implementation/example/redis.yaml
@@ -19,7 +19,7 @@ kind: PersistentVolumeClaim
 metadata:
   name: redis-pv-claim
   annotations:
-   volume.beta.kubernetes.io/storage-class: glusterfs-storage
+   volume.beta.kubernetes.io/storage-class: glusterfs-storage-replicated
   labels:
     app: redis
 spec:
@@ -27,7 +27,7 @@ spec:
     - ReadWriteOnce
   resources:
     requests:
-      storage: 1Gi
+      storage: 500M
 ---
 apiVersion: apps/v1
 kind: Deployment
